@@ -6,14 +6,14 @@ public class InMemoryHistoryManager implements HistoryManager {
 
     @Override
     public void add(Task task) {
-        history.add(task);
-        if (history.size() > 10) {
-            history.removeFirst();
+        history.add(task); // Добавление задач в историю
+        if (history.size() > 10) { // Если размер превышает 10
+            history.remove(0); // Удалить самую первую задачу
         }
     }
 
     @Override
     public List<Task> getHistory() {
-        return new ArrayList<>(history);
+        return new ArrayList<>(history); // Возврат копии истории
     }
 }
